profilelist1exp/unpackaged/objects/Relationship_Lead__c.object
<CustomObject>
    <description>These records are used to capture the marketing qualified sales ready leads. These records will be created by marketing users in SFDC</description>
    <fields>
        <fullName>AVP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AVP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lead_Generations5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accept_Reject_Status__c</fullName>
        <label>Accept/Reject/Reassign Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted By Sales</fullName>
                    <color>#33CC00</color>
                    <label>Accepted By Sales</label>
                </value>
                <value>
                    <fullName>Rejected By Sales</fullName>
                    <color>#FF0000</color>
                    <label>Rejected By Sales</label>
                </value>
                <value>
                    <fullName>Reassigned By Sales</fullName>
                    <color>#3333FF</color>
                    <label>Reassigned By Sales</label>
                </value>
                <value>
                    <fullName>Routed to Channel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Executive/ PDM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lead_Generations4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationship Leads</relationshipLabel>
        <relationshipName>Relationship_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Contact__r.Account.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Sales_Channel_Id__c</fullName>
        <formula>Contact__r.Account.Sales_Channel__r.Group_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Sales Channel Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actions_Available__c</fullName>
        <formula>IF( AND( ISPICKVAL(Status__c, &apos;Requires Follow-Up&apos;), OR (ISPICKVAL(Accept_Reject_Status__c, &apos;&apos;), ISPICKVAL(Accept_Reject_Status__c, &apos;Reassigned By Sales&apos;))) , HYPERLINK(Id &amp; &apos;/e?nooverride=1&amp;retURL=/&apos; &amp; Id &amp; &apos;&amp;00NA0000000b8a3=Accepted By Sales&apos;, IMAGE(&quot;resource/1257839368000/MA_Accept&quot;, &apos;Accept&apos;), &apos;_parent&apos;) &amp; &apos; &apos; &amp; 
HYPERLINK(Id &amp; &apos;/e?nooverride=1&amp;retURL=/&apos; &amp; Id &amp; &apos;&amp;00NA0000000b8a3=Rejected By Sales&amp;00NA0000000b8af=Rejected - Completed Follow-Up&apos;, IMAGE(&quot;resource/1257839368000/MA_Reject&quot;, &apos;Reject&apos;), &apos;_parent&apos;) &amp; &apos; &apos; &amp; 
HYPERLINK(&apos;/apex/RelationshipLeadAccPlayTM?Id=&apos;+Id+&apos;&amp;AccId=&apos;+ Contact__r.Account.Id+&apos;&amp;OwnerId=&apos;+ Relationship_Lead_Owner__c , IMAGE(&apos;resource/1266470716000/MA_Reassign&apos;, &apos;Reassign&apos;) ,&apos;_parent&apos;) , 

IF( AND(OR(ISPICKVAL(Status__c, &apos;Attempted to Contact - Awaiting Response&apos;),ISPICKVAL(Status__c, &apos;Future Follow-Up&apos;)),NOT( ISPICKVAL( Lead_Quality__c , &apos;Qualified&apos;) )) , 
HYPERLINK(Id &amp; &apos;/e?nooverride=1&amp;retURL=/&apos; &amp; Id, IMAGE(&quot;resource/1257839368000/MA_UpdateRecord&quot;, &apos;Update Record&apos;), &apos;_parent&apos;), 
IF(AND( ISPICKVAL(Lead_Quality__c, &apos;Qualified&apos;), OR(ISPICKVAL(Opportunity_Status__c,&apos;New Opportunity&apos;), ISPICKVAL(Opportunity_Status__c,&apos;Existing Opportunity&apos;),ISPICKVAL(Opportunity_Status__c,&apos;Run Rate Opportunity&apos;)) , Opportunity__c=null ), 
HYPERLINK(&apos;006/e?retURL=/&apos; &amp; Id &amp; &apos;&amp;RecordType=012300000004zf2&amp;00NA0000000bC8S=&apos; &amp; Id&amp;&apos;&amp;opp4=&apos;&amp; Account__c &amp;&apos;&amp;opp4_lkid=&apos; &amp; Contact__r.AccountId&amp;&apos;&amp;opp17=&apos;&amp; Campaign__r.Name&amp;&apos;&amp;00NA0000000b8l9=1&amp;opp5=Deal/Bid - Direct&amp;opp11=Plan - 1%25&amp;00NA00000063VHF=&apos;&amp; Solution_ID__c &amp;&apos;&amp;nooverride=1&apos; , IMAGE(&quot;resource/1257839368000/MA_NewOpptys&quot;, &apos;New Opportunity&apos;),&apos;_parent&apos;) &amp; &apos; &apos; &amp; 
HYPERLINK(&apos;apex/MarketingExistingOppAssn?retURL=%2F&apos; &amp; Id &amp; &apos;&amp;relationshipLeadId=&apos; &amp; Id &amp; &apos;&amp;accid=&apos; &amp; Contact__r.AccountId &amp; &apos;&amp;campaignid=&apos; &amp; Campaign__c &amp; &apos;&amp;solutionid=&apos; &amp; Solution_ID__c, IMAGE(&quot;resource/1257839368000/MA_ExistingOpptys&quot;, &apos;Existing Opportunity&apos;),&apos;_parent&apos;), 

&apos;[No Action Available]&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actions Available</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Source__c</fullName>
        <caseSensitive>true</caseSensitive>
        <inlineHelpText>Do not change this field value.</inlineHelpText>
        <label>CM Source (Do Not Edit)</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Called_Customer__c</fullName>
        <label>Spoke to Customer?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Accept_Reject_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <color>#33CC00</color>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                    <color>#FF0000</color>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CampaignContactKey__c</fullName>
        <formula>IF( Contact__r.Id==&apos;&apos; ,null,Campaign__r.Id+&quot;:&quot; +Contact__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CampaignContactKey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_ID_LinkTracker__c</fullName>
        <label>Campaign ID(LinkTracker)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Member__c</fullName>
        <formula>IF( TRIM(LEFT(CM_Source__c, 3)) = &apos;00v&apos; , HYPERLINK( CM_Source__c , CM_Source__c , &apos;_Parent&apos;), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Member</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Owner_Email__c</fullName>
        <formula>Campaign__r.Campaign_Owner__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Vehicle__c</fullName>
        <formula>TEXT(Campaign__r.Campaign_Vehicle__c)</formula>
        <label>Campaign Vehicle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.RecordType.Name</field>
                <operation>notEqual</operation>
                <value>Campaign 2.0</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Relationship Leads (Campaign)</relationshipLabel>
        <relationshipName>Lead_Generations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Campaign_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Campaign Name</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Relationship Leads (Channel Campaign Name)</relationshipLabel>
        <relationshipName>Relationship_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Lead_ID__c</fullName>
        <label>Channel Lead ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Lead_Status__c</fullName>
        <formula>TEXT(Channel_Lead__r.Status)</formula>
        <label>Channel Lead Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Lead_Tracking_ID__c</fullName>
        <formula>Channel_Lead__r.Lead_Tracking_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Lead Tracking ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Channel Lead Created through Routing</description>
        <label>Channel Lead</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Lead.RecordType.Name</field>
                <operation>notEqual</operation>
                <value>Channel Lead 2.0</value>
            </filterItems>
            <filterItems>
                <field>Lead.RecordType.Name</field>
                <operation>notEqual</operation>
                <value>Direct Lead 2.0</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Relationship Leads</relationshipLabel>
        <relationshipName>ChannelLeads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Follow_Up_Date__c</fullName>
        <defaultValue>IF ( OR (ISPICKVAL( Status__c, &quot;Accepted - Completed Follow-Up&quot;) , ISPICKVAL( Status__c, &quot;Rejected - Completed Follow-Up&quot;)) , NOW(), null )</defaultValue>
        <label>Completed Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consent_to_engage_Dell_Channel_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Customer consent is required to route a Dell lead to a channel partner; upon checking the box, click “continue” to complete the “route to channel” process.</inlineHelpText>
        <label>Customer consents to engage Partner?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>SalesLeads</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Data_Center_Optimization__c</fullName>
        <label>Data Center Optimization</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deal_ID__c</fullName>
        <label>Deal ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Reg_Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Reg Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Relationship Leads (Deal Reg Opportunity Name)</relationshipLabel>
        <relationshipName>Relationship_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal_Reg_Revenue__c</fullName>
        <label>Deal Reg “Revenue $”</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Decision_Making_Role__c</fullName>
        <label>Decision Making Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Power Sponsor / Decision Maker</fullName>
                    <color>#0B6FCE</color>
                    <label>Power Sponsor / Decision Maker</label>
                </value>
                <value>
                    <fullName>Sponsor/ Champion</fullName>
                    <color>#78C953</color>
                    <label>Sponsor/ Champion</label>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                    <color>#E27001</color>
                    <label>Influencer</label>
                </value>
                <value>
                    <fullName>Business User</fullName>
                    <color>#A845DC</color>
                    <label>Business User</label>
                </value>
                <value>
                    <fullName>Evaluator</fullName>
                    <color>#F3D904</color>
                    <label>Evaluator</label>
                </value>
                <value>
                    <fullName>Purchasing / Procurement</fullName>
                    <color>#A53711</color>
                    <label>Purchasing / Procurement</label>
                </value>
                <value>
                    <fullName>Financial Buyer</fullName>
                    <color>#66E9BD</color>
                    <label>Financial Buyer</label>
                </value>
                <value>
                    <fullName>Technical Buyer</fullName>
                    <color>#0B24BE</color>
                    <label>Technical Buyer</label>
                </value>
                <value>
                    <fullName>Operational Buyer</fullName>
                    <color>#419249</color>
                    <label>Operational Buyer</label>
                </value>
                <value>
                    <fullName>Legal Approver</fullName>
                    <color>#B6E32E</color>
                    <label>Legal Approver</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dell_Existing_Customer__c</fullName>
        <label>Dell Existing Customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <color>#33CC00</color>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                    <color>#FF0000</color>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dell_Visitor_ID__c</fullName>
        <label>Dell Visitor ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dell_can_contact_me_in_the_future__c</fullName>
        <label>Dell can contact me in the future</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <color>#33CC00</color>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                    <color>#FF0000</color>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eloqua_ID__c</fullName>
        <externalId>true</externalId>
        <label>Eloqua ID</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Lead_Score__c</fullName>
        <inlineHelpText>The Eloqua Lead Score provides a score of a customer based on their buying profile and their level of online and marketing engagement</inlineHelpText>
        <label>Eloqua Lead Score</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - 25</fullName>
                    <color>#0B6FCE</color>
                    <label>1 - 25</label>
                </value>
                <value>
                    <fullName>26 - 99</fullName>
                    <color>#CC33CC</color>
                    <label>26 - 99</label>
                </value>
                <value>
                    <fullName>100 - 499</fullName>
                    <color>#78C953</color>
                    <label>100 - 499</label>
                </value>
                <value>
                    <fullName>500 - 999</fullName>
                    <color>#E27001</color>
                    <label>500 - 999</label>
                </value>
                <value>
                    <fullName>1000 - 4999</fullName>
                    <color>#A845DC</color>
                    <label>1000 - 4999</label>
                </value>
                <value>
                    <fullName>5000 - 9999</fullName>
                    <color>#F3D904</color>
                    <label>5000 - 9999</label>
                </value>
                <value>
                    <fullName>10000+</fullName>
                    <color>#A53711</color>
                    <label>10000+</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_user_Productivity__c</fullName>
        <label>End-user Productivity</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Date__c</fullName>
        <label>Follow-Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Form_Referrer__c</fullName>
        <inlineHelpText>The customer was redirected to the online form from this link.</inlineHelpText>
        <label>Form Referrer</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Form_URL__c</fullName>
        <inlineHelpText>This is a link to the online form your customer filled out.</inlineHelpText>
        <label>Form URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Geo_Populated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Geo Populated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISM_Formula__c</fullName>
        <description>CR 8166 – ISM information from user&apos;s card</description>
        <formula>Inside_Sales_Rep__r.ISM__r.FirstName &amp; &quot; &quot; &amp; Inside_Sales_Rep__r.ISM__r.LastName</formula>
        <label>ISM/ Channel ISM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Process_Simplification__c</fullName>
        <label>IT Process Simplification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inactive_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry_Vertical_Need__c</fullName>
        <label>Industry / Vertical Need</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inside Sales Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lead_Generations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inside Sales Rep/ ICAM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lead_Generations3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_this_an_old_migrated_record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is to be populated as TRUE only for the initial migration of old custom CMs to Std CMs. For all subsequent data it will be set to FALSE. This will only be used for reporting purposes.</description>
        <label>Is this an old migrated record?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Owner_Reassignment_Date__c</fullName>
        <label>Last Owner Reassignment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Capture_DateTime__c</fullName>
        <label>Lead Capture Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Capture_Date__c</fullName>
        <label>Lead Capture Date (Old)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Form_ID__c</fullName>
        <label>Lead Form ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_ID_Do_Not_Edit__c</fullName>
        <caseSensitive>true</caseSensitive>
        <inlineHelpText>Do not change this field value.</inlineHelpText>
        <label>Lead ID (Do Not Edit)</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lead_Quality__c</fullName>
        <label>Sales Qualified?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Called_Customer__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Qualified</fullName>
                    <color>#33CC00</color>
                    <label>Qualified</label>
                </value>
                <value>
                    <fullName>Unqualified</fullName>
                    <color>#FF0000</color>
                    <label>Unqualified</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Reset_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates who reset this Lead</description>
        <label>Lead Reset By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Relationship_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Reset_Date__c</fullName>
        <description>Indicates when this Lead is reset</description>
        <label>Lead Reset Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Reset__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this Lead has been reset</description>
        <label>Lead Reset?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LiveBall_Respondent_ID__c</fullName>
        <label>Form Respondent ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Comments__c</fullName>
        <label>Marketing Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Omniture_Visitor_ID__c</fullName>
        <label>Omniture Visitor ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Created?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Status__c</fullName>
        <inlineHelpText>Please click on the relevant opportunity buttons after selecting opportunity status to complete lead follow up</inlineHelpText>
        <label>Opportunity Status?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Lead_Quality__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>New Opportunity</fullName>
                    <color>#0B6FCE</color>
                    <label>New Opportunity</label>
                </value>
                <value>
                    <fullName>Existing Opportunity</fullName>
                    <color>#78C953</color>
                    <label>Existing Opportunity</label>
                </value>
                <value>
                    <fullName>SMB Opportunity</fullName>
                    <color>#F3D904</color>
                    <label>SMB Opportunity</label>
                </value>
                <value>
                    <fullName>Run Rate Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Lead_Generations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Created_Date__c</fullName>
        <description>This date is to be populated with the original Created Date value only for the initial migration of old custom CMs to Std CMs. For all subsequent data it will be blank. This will only be used for reporting purposes.</description>
        <label>Original Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Action__c</fullName>
        <formula>IF(ISPICKVAL(Status__c, &apos;Closed - Expired&apos;),&apos;[No Action Available]&apos;,IF( AND( ISPICKVAL(Status__c, &apos;Requires Follow-Up&apos;), OR (ISPICKVAL(Accept_Reject_Status__c, &apos;&apos;), ISPICKVAL(Accept_Reject_Status__c, &apos;Reassigned By Sales&apos;))) , 
&apos;[No Action Available]&apos;, 
IF( AND(OR(ISPICKVAL(Status__c, &apos;Awaiting Follow Up&apos;),ISPICKVAL(Status__c, &apos;Future Follow-Up&apos;)),NOT( ISPICKVAL( Lead_Quality__c , &apos;Qualified&apos;) ),NOT( ISPICKVAL(Status__c, &apos;Closed - Expired&apos;) )) , 
&apos;[No Action Available]&apos;, 
IF(AND( ISPICKVAL(Lead_Quality__c, &apos;Qualified&apos;),(ISPICKVAL(Opportunity_Status__c,&apos;SMB Opportunity&apos;)), Opportunity__c=null ), 
HYPERLINK(&apos;006/e?retURL=/&apos; &amp; Id &amp; &apos;&amp;RecordType=012A0000000Vhy7&amp;00NA0000000bC8S=&apos; &amp; Id&amp;&apos;&amp;opp4=&apos;&amp; Account__c &amp;&apos;&amp;opp4_lkid=&apos; &amp; Contact__r.AccountId&amp;&apos;&amp;opp17=&apos;&amp; Campaign__r.Name&amp;&apos;&amp;00NA0000000b8l9=1&amp;opp5=Deal/Bid - Direct&amp;opp11=Plan - 1%25&amp;00NA00000063VHF=&apos;&amp; Solution_ID__c &amp;&apos;&amp;nooverride=1&apos; , IMAGE(&quot;resource/1352358599000/MA_NewSMBOpptys&quot;, &apos;New SMB Opportunity&apos;),&apos;_parent&apos;), 
&apos;[No Action Available]&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Names__c</fullName>
        <formula>HYPERLINK( &apos;/&apos;+Channel_Lead__r.Partner_Account__c , Channel_Lead__r.Partner_Account__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Influence_Over__c</fullName>
        <label>Purchase/Influence Over</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Purchase_Timeframe__c</fullName>
        <label>Purchase Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Immediately</fullName>
                    <color>#0B6FCE</color>
                    <label>Immediately</label>
                </value>
                <value>
                    <fullName>1-6 months</fullName>
                    <color>#78C953</color>
                    <label>1-6 months</label>
                </value>
                <value>
                    <fullName>7-12 months</fullName>
                    <color>#E27001</color>
                    <label>7-12 months</label>
                </value>
                <value>
                    <fullName>Undecided</fullName>
                    <color>#A845DC</color>
                    <label>Undecided</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Questions_Comments__c</fullName>
        <inlineHelpText>Comments or questions raised by customer during interaction with Dell</inlineHelpText>
        <label>Customer Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RSM_Formula__c</fullName>
        <description>CR 8166 – RSM information from user&apos;s card</description>
        <formula>Account_Executive__r.RSM__r.FirstName &amp; &quot; &quot; &amp; Account_Executive__r.RSM__r.LastName</formula>
        <label>RSM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lead_Generations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Accept_Reject_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Not My Account</fullName>
                    <color>#0B6FCE</color>
                    <label>Not My Account</label>
                </value>
                <value>
                    <fullName>Bad Contact Info</fullName>
                    <color>#78C953</color>
                    <label>Bad Contact Info</label>
                </value>
                <value>
                    <fullName>Dell Not On Contract</fullName>
                    <color>#E27001</color>
                    <label>Dell Not On Contract</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_Lead_Accepted_Date__c</fullName>
        <label>Relationship Lead Accepted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Relationship_Lead_Close_Date__c</fullName>
        <label>Relationship Lead Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Relationship_Lead_Owner_Role__c</fullName>
        <formula>Text(Campaign__r.Follow_Up_Role__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship Lead Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Lead_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Lead Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lead_Generations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Lead_Owners_Manager__c</fullName>
        <formula>Relationship_Lead_Owner__r.Manager.FirstName  &amp;  &quot; &quot; &amp; Relationship_Lead_Owner__r.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>CR8165 Capture Relationship Lead Owner Manager</inlineHelpText>
        <label>Relationship Lead Owner&apos;s Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Lead_Qualified_Date__c</fullName>
        <label>Relationship Lead Qualified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Relationship_Lead_Score__c</fullName>
        <label>Relationship Lead Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High Priority (Extremely hot leads; SLA = 48 hours)</fullName>
                    <color>#0B6FCE</color>
                    <label>High Priority (Extremely hot leads; SLA = 48 hours)</label>
                </value>
                <value>
                    <fullName>TeleQualified Lead (Potential Opportunity; SLA = 48 hours)</fullName>
                    <color>#E27001</color>
                    <label>TeleQualified Lead (Potential Opportunity; SLA = 48 hours)</label>
                </value>
                <value>
                    <fullName>Priority (Contact participated in Marketing program; SLA = 1 Week)</fullName>
                    <color>#78C953</color>
                    <label>Priority (Contact participated in Marketing program; SLA = 1 Week)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_Description__c</fullName>
        <formula>Relationship_Lead_Owner__r.Role_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role Description</label>
        <type>Text</type>
    </fields>
</CustomObject>